Implement lawyer access invites
